<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ScrollView 
    android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	    	    android:layout_above="@+id/ad_layout">
    	
    
	<RelativeLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/iWillBeLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text="@string/i_will_be"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <RadioGroup
	        android:id="@+id/radioGroupRole"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/iWillBeLabel"
	        android:orientation="vertical" >

	        <RadioButton
	            android:id="@+id/radioExpecting"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/expecting" 
	             android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <RadioButton
	            android:id="@+id/radioSending"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sending" 
	             android:textAppearance="?android:attr/textAppearanceMedium" />
	    </RadioGroup>
	
	    <TextView
	        android:id="@+id/fromLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/radioGroupRole"
	        android:text="@string/from"
	        android:clickable="true"
	        android:onClick="doLaunchContactPicker"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/contactName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/timeLabel"
	        android:layout_below="@+id/radioGroupRole"
	        android:layout_alignLeft="@+id/radioGroupRole"
	        android:clickable="true"
	        android:onClick="doLaunchContactPicker"
	        android:text="@string/launch_contacts"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/timeLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/fromLabel"
	        android:text="@string/by_time"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TimePicker
	        android:id="@+id/timePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/radioGroupRole"
	        	        android:layout_below="@+id/fromLabel"
	         />
	

		
	    
		<TextView
	        android:id="@+id/soundLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/timePicker"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	       	android:onClick="doLaunchSoundPicker"
	       	android:text="@string/sound"
	       	android:clickable="true"
	         />
		<TextView
	        android:id="@+id/soundName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/timePicker"
	        android:layout_alignLeft="@+id/radioGroupRole"
	        
	        android:textAppearance="?android:attr/textAppearanceMedium"
	       	android:onClick="doLaunchSoundPicker"
	       	android:text="@string/pick_sound"
	       	android:clickable="true"
	         />
		<TextView
	        android:id="@+id/containsPhraseLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/soundName"
	        android:text="@string/containing_phrase"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	   
	    <EditText
	        android:id="@+id/containsPhrase"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/containsPhraseLabel"
	        android:maxLength="20" 
	        
	        android:inputType="text"/>
	    
	    <Button
	        android:id="@+id/saveReminder"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/containsPhrase" 
	        android:text="@string/save_reminder" />


	</RelativeLayout>
</ScrollView>
 		<LinearLayout android:layout_width="fill_parent"
                  android:id="@+id/ad_layout"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  android:layout_alignParentBottom="true"
                  >
        <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a14f1e58461d0e1"
                         ads:adSize="BANNER"
                         ads:testDevices="TEST_EMULATOR,4C4EE1E1D2F361AB6D35E310F5B583CF"
                         ads:loadAdOnCreate="true"/>
    </LinearLayout>
 
 

</RelativeLayout>